# TelegramScheduleBot

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/: aiogram_run.py  create_bot.py  init.py  main.py  parsing.py  read.py
src/filters/: filters.py
src/handlers/: start.py
src/keyboards/: keyboard.py
tests/: conftest.py  test_handlers.py  test_utils.py
