[metadata]
name = telegram-schedule-bot
version = attr: src.__version__
description = Telegram bot for managing and distributing school schedules
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/telegram-schedule-bot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Education
    Topic :: Utilities
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    aiogram>=3.10.0
    python-decouple>=3.8
    pypdf>=4.0.2
    pytesseract>=0.3.10
    pdf2image>=1.16.3
    requests>=2.31.0
    beautifulsoup4>=4.12.2
    selenium>=4.15.2

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    flake8>=6.0.0
    black>=23.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    tox>=4.0.0
pdf =
    pypdf>=4.0.0
    pytesseract>=0.3.0
    pdf2image>=1.16.0
    pillow>=10.0.0
web =
    selenium>=4.0.0
    beautifulsoup4>=4.12.0
    requests>=2.31.0

[options.entry_points]
console_scripts =
    schedule-bot = aiogram_run:main
    schedule-bot-start = main:main
    schedule-parser = parsing:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,venv

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
